* LibUdp/BASIC/INTERFACE/IUdpBasic.cs: 	  start with udp send class
	* LibUdp/LibUdp.csproj:
	* LibUdp/BASIC/UdpBasic.cs:
	* LibUdp/Udp_UnitTest/packages.config:
	* LibUdp/Udp_UnitTest/Udp_UnitTest.csproj:
	* LibUdp/Udp_UnitTest/UdpBasic_UnitTests.cs:

--- a/LibUdp/Udp_UnitTest/Udp_UnitTest.csproj
+++ b/LibUdp/Udp_UnitTest/Udp_UnitTest.csproj
@@ -29,9 +29,15 @@
     <Reference Include="nunit.framework">
       <HintPath>..\..\packages\NUnit.3.6.1\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="Castle.Core">
+      <HintPath>..\..\packages\Castle.Core.4.0.0\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Moq">
+      <HintPath>..\..\packages\Moq.4.7.8\lib\net45\Moq.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Test.cs" />
+    <Compile Include="UdpBasic_UnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibUdp.csproj">
