--- a/LibUdp/LibUdp.csproj
+++ b/LibUdp/LibUdp.csproj
@@ -30,8 +30,13 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UdpBasic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BASIC\UdpBasic.cs" />
+    <Compile Include="BASIC\INTERFACE\IUdpBasic.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="BASIC\" />
+    <Folder Include="BASIC\INTERFACE\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
