* LibUdp/BASIC/CONSTANTS/BasicErrorMessage.cs: 	  start with unit tests
	* LibUdp/LibUdp.csproj:
	* LibUdp/BASIC/UdpBasic.cs:
	* LibUdp/BASIC/SEND/UdpSend.cs:
	* LibUdp/BASIC/SEND/IUdpSend.cs:
	* LibUdp/BASIC/INTERFACE/UdpBasic.cs:
	* LibUdp/BASIC/INTERFACE/IUdpBasic.cs:
	* LibUdp/Udp_UnitTest/Udp_UnitTest.csproj:
	* LibUdp/Udp_UnitTest/UdpSend_UnitTests.cs:

--- a/LibUdp/Udp_UnitTest/Udp_UnitTest.csproj
+++ b/LibUdp/Udp_UnitTest/Udp_UnitTest.csproj
@@ -38,6 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="UdpBasic_UnitTests.cs" />
+    <Compile Include="UdpSend_UnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibUdp.csproj">
