--- a/LibUdp/LibUdp.csproj
+++ b/LibUdp/LibUdp.csproj
@@ -33,10 +33,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BASIC\UdpBasic.cs" />
     <Compile Include="BASIC\INTERFACE\IUdpBasic.cs" />
+    <Compile Include="BASIC\SEND\UdpSend.cs" />
+    <Compile Include="BASIC\SEND\IUdpSend.cs" />
+    <Compile Include="BASIC\CONSTANTS\BasicErrorMessage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="BASIC\" />
     <Folder Include="BASIC\INTERFACE\" />
+    <Folder Include="BASIC\SEND\" />
+    <Folder Include="BASIC\CONSTANTS\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
