method chaining in obsolete, counter sending OK now

--- a/LibUdp/Udp_UnitTest/Udp_UnitTest.csproj
+++ b/LibUdp/Udp_UnitTest/Udp_UnitTest.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="UdpBasic_UnitTests.cs" />
+    <Compile Include="UdpSendPeriodic_UnitTest.cs" />
     <Compile Include="UdpSend_UnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
