--- a/LibUdp/LibUdp.csproj
+++ b/LibUdp/LibUdp.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Compile Include="BASIC\RECEIVE\IUdpReceive.cs" />
     <Compile Include="BASIC\RECEIVE\UdpReceive.cs" />
+    <Compile Include="BASIC\SEND\UdpSendPeriodic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BASIC\UdpBasic.cs" />
     <Compile Include="BASIC\INTERFACE\IUdpBasic.cs" />
