--- a/LibraryTestRunner/LibraryTestRunner.csproj
+++ b/LibraryTestRunner/LibraryTestRunner.csproj
@@ -38,6 +38,10 @@
       <Project>{04B6D081-6952-4F0D-8402-DF169E0DFB51}</Project>
       <Name>LibUdp</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SystemServices\SystemServices.csproj">
+      <Project>{2eefd039-02a7-4dc4-940e-58b76074eb88}</Project>
+      <Name>SystemServices</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TimerMockable\TimerMockable.csproj">
       <Project>{323A5AA7-F7EB-4990-9B0E-540D75837716}</Project>
       <Name>TimerMockable</Name>
@@ -52,7 +56,7 @@
       <Properties>
         <Policies>
           <VersionControlPolicy>
-            <CommitMessageStyle Indent="&#x9;" LastFilePostfix=":&#xA;  " LineAlign="0" IncludeDirectoryPaths="True" />
+            <CommitMessageStyle Indent="	" LastFilePostfix=":&#xA;  " LineAlign="0" IncludeDirectoryPaths="True" />
             <inheritsSet />
             <inheritsScope />
           </VersionControlPolicy>
