--- a/TelegrammBuilder/TelegrammBuilder.csproj
+++ b/TelegrammBuilder/TelegrammBuilder.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2EEFD039-02A7-4DC4-940E-58B76074EB88}</ProjectGuid>
+    <ProjectGuid>{921FDDE8-85C6-4AB4-8757-2345FA18AD59}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SystemServices</RootNamespace>
-    <AssemblyName>SystemServices</AssemblyName>
+    <RootNamespace>TelegrammBuilder</RootNamespace>
+    <AssemblyName>TelegrammBuilder</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,10 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TIMEUTILITIES\INTERFACE\ITimeUtil.cs" />
-    <Compile Include="Services.cs" />
+    <Compile Include="ITelegrammBuilder.cs" />
+    <Compile Include="TelegrammBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TIMEUTILITIES\TimeUtil.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SystemServices\SystemServices.csproj">
+      <Project>{2eefd039-02a7-4dc4-940e-58b76074eb88}</Project>
+      <Name>SystemServices</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
