--- a/HardConfig/HardConfig.csproj
+++ b/HardConfig/HardConfig.csproj
@@ -40,14 +40,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ANTEROOM\HardConfigAnteRoom.cs" />
+    <Compile Include="COMMON\Definitiones.cs" />
+    <Compile Include="COMMON\Formatting.cs" />
+    <Compile Include="COMMON\GeneralConstants.cs" />
     <Compile Include="COMMON\GetData.cs" />
     <Compile Include="COMMON\InfoOperationMode.cs" />
     <Compile Include="COMMON\InfoString.cs" />
     <Compile Include="COMMON\Seperators.cs" />
     <Compile Include="HardConfig.cs" />
-    <Compile Include="LIVINGROOM\HardConfigLivingRoom.cs" />
+    <Compile Include="LIVINGROOM\CENTERCONTROL_WITH_KITCHEN\HardConfigLivingRoom.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SLEEPINGROOM\HardConfigSleepingRoom.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="LIVINGROOM\EAST\" />
+    <Folder Include="LIVINGROOM\WEST\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SystemServices\SystemServices.csproj">
+      <Project>{2eefd039-02a7-4dc4-940e-58b76074eb88}</Project>
+      <Name>SystemServices</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
