--- a/HomeAutomationLibraries-master/TelegrammEvaluator/TelegrammEvaluator.csproj
+++ b/HomeAutomationLibraries-master/TelegrammEvaluator/TelegrammEvaluator.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -30,9 +30,13 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DoorTelegrammEvaluator.cs" />
+    <Compile Include="EvaluatorCollection.cs" />
+    <Compile Include="TelegrammBrocker.cs" />
     <Compile Include="TelegrammEvaluator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="INTERFACE\ITelegrammEvaluator.cs" />
+    <Compile Include="WindowTelegrammEvaluator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HardConfig\HardConfig.csproj">
@@ -48,8 +52,6 @@
       <Name>TelegrammBuilder</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="INTERFACE\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
