--- a/HomeAutomationLibraries-master/TestRunnerUdpSendPeriodicStartStop/TestRunnerUdpSendPeriodicStartStop.csproj
+++ b/HomeAutomationLibraries-master/TestRunnerUdpSendPeriodicStartStop/TestRunnerUdpSendPeriodicStartStop.csproj
@@ -27,7 +27,14 @@
     <ExternalConsole>true</ExternalConsole>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.4.2.0\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Moq, Version=4.7.137.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.7.137\lib\net45\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TestRunnerSendStartStop.cs" />
@@ -50,6 +57,9 @@
       <Project>{323A5AA7-F7EB-4990-9B0E-540D75837716}</Project>
       <Name>TimerMockable</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
