--- a/HomeAutomationLibraries-master/HeaterControl_UnitTests/HeaterControl_UnitTests.csproj
+++ b/HomeAutomationLibraries-master/HeaterControl_UnitTests/HeaterControl_UnitTests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CDC27552-2A35-4885-B458-868AA8F3DEC1}</ProjectGuid>
+    <ProjectGuid>{530F1719-BE6A-428B-89C5-311E4A1AC11F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HeaterController</RootNamespace>
-    <AssemblyName>HeaterController</AssemblyName>
+    <RootNamespace>HeaterControl_UnitTests</RootNamespace>
+    <AssemblyName>HeaterControl_UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -36,6 +36,9 @@
     <Reference Include="Moq, Version=4.7.137.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.7.137\lib\net45\Moq.dll</HintPath>
     </Reference>
+    <Reference Include="nunit.framework, Version=3.8.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.8.1\lib\net45\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -47,17 +50,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HeaterController.cs" />
-    <Compile Include="INTERFACE\IHeaterControl.cs" />
+    <Compile Include="HeaterControl_UnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\HardConfig\HardConfig.csproj">
       <Project>{5d49f2ea-7a48-4d68-badc-a40414ff7fd7}</Project>
       <Name>HardConfig</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HeaterController\HeaterController.csproj">
+      <Project>{cdc27552-2a35-4885-b458-868aa8f3dec1}</Project>
+      <Name>HeaterController</Name>
     </ProjectReference>
     <ProjectReference Include="..\TimerMockable\TimerMockable.csproj">
       <Project>{323a5aa7-f7eb-4990-9b0e-540d75837716}</Project>
