verification telegram inserted

--- a/HomeAutomationLibraries-master/TelegrEvaluator_UnitTests/TelegrEvaluator_UnitTests.csproj
+++ b/HomeAutomationLibraries-master/TelegrEvaluator_UnitTests/TelegrEvaluator_UnitTests.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="TelegrammEvaluator_UnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VerificationTelegramms.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TelegrammEvaluator\TelegrammEvaluator.csproj">
