--- a/HomeAutomationLibraries-master/HeaterController/HeaterController.csproj
+++ b/HomeAutomationLibraries-master/HeaterController/HeaterController.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>HeaterController</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,6 +34,9 @@
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.4.2.0\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
+    <Reference Include="HardConfig">
+      <HintPath>..\HardConfig\obj\Release\HardConfig.dll</HintPath>
+    </Reference>
     <Reference Include="Moq, Version=4.7.137.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.7.137\lib\net45\Moq.dll</HintPath>
     </Reference>
@@ -45,6 +49,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="TimerMockable">
+      <HintPath>..\TimerMockable\bin\Release\TimerMockable.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HeaterController.cs" />
@@ -55,14 +62,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\HardConfig\HardConfig.csproj">
-      <Project>{5d49f2ea-7a48-4d68-badc-a40414ff7fd7}</Project>
-      <Name>HardConfig</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TimerMockable\TimerMockable.csproj">
-      <Project>{323a5aa7-f7eb-4990-9b0e-540d75837716}</Project>
-      <Name>TimerMockable</Name>
-    </ProjectReference>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
