--- a/HomeAutomationLibraries-master/HeaterControl_UnitTests/HeaterControl_UnitTests.csproj
+++ b/HomeAutomationLibraries-master/HeaterControl_UnitTests/HeaterControl_UnitTests.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HeaterControl_UnitTests</RootNamespace>
     <AssemblyName>HeaterControl_UnitTests</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,6 +34,9 @@
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.4.2.0\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
+    <Reference Include="HardConfig">
+      <HintPath>..\HardConfig\bin\Debug\HardConfig.dll</HintPath>
+    </Reference>
     <Reference Include="Moq, Version=4.7.137.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.7.137\lib\net45\Moq.dll</HintPath>
     </Reference>
@@ -48,6 +52,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="TimerMockable">
+      <HintPath>..\TimerMockable\bin\Debug\TimerMockable.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HeaterControl_UnitTests.cs" />
@@ -63,17 +70,9 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\HardConfig\HardConfig.csproj">
-      <Project>{5d49f2ea-7a48-4d68-badc-a40414ff7fd7}</Project>
-      <Name>HardConfig</Name>
-    </ProjectReference>
     <ProjectReference Include="..\HeaterController\HeaterController.csproj">
       <Project>{cdc27552-2a35-4885-b458-868aa8f3dec1}</Project>
       <Name>HeaterController</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TimerMockable\TimerMockable.csproj">
-      <Project>{323a5aa7-f7eb-4990-9b0e-540d75837716}</Project>
-      <Name>TimerMockable</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
