--- a/HomeAutomationLibraries-master/HeaterController/HeaterController.csproj
+++ b/HomeAutomationLibraries-master/HeaterController/HeaterController.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HeaterController</RootNamespace>
     <AssemblyName>HeaterController</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -35,7 +35,7 @@
       <HintPath>..\packages\Castle.Core.4.2.0\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
     <Reference Include="HardConfig">
-      <HintPath>..\HardConfig\obj\Release\HardConfig.dll</HintPath>
+      <HintPath>..\HardConfig\bin\Debug\HardConfig.dll</HintPath>
     </Reference>
     <Reference Include="Moq, Version=4.7.137.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.7.137\lib\net45\Moq.dll</HintPath>
@@ -50,7 +50,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="TimerMockable">
-      <HintPath>..\TimerMockable\bin\Release\TimerMockable.dll</HintPath>
+      <HintPath>..\TimerMockable\bin\Debug\TimerMockable.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
