--- a/HomeAutomationLibraries-master/HomeAutomationLibs/HomeAutomationLibs.csproj
+++ b/HomeAutomationLibraries-master/HomeAutomationLibs/HomeAutomationLibs.csproj
@@ -34,6 +34,9 @@
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.4.2.0\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
+    <Reference Include="LibUdp">
+      <HintPath>..\LibUdp\bin\Debug\LibUdp.dll</HintPath>
+    </Reference>
     <Reference Include="Moq, Version=4.7.137.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.7.137\lib\net45\Moq.dll</HintPath>
     </Reference>
@@ -52,10 +55,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\LibUdp\LibUdp.csproj">
-      <Project>{04b6d081-6952-4f0d-8402-df169e0dfb51}</Project>
-      <Name>LibUdp</Name>
-    </ProjectReference>
     <ProjectReference Include="..\SystemServices\SystemServices.csproj">
       <Project>{2eefd039-02a7-4dc4-940e-58b76074eb88}</Project>
       <Name>SystemServices</Name>
