--- a/HomeAutomationLibraries-master/LibUdp/Udp_UnitTest/Udp_UnitTest.csproj
+++ b/HomeAutomationLibraries-master/LibUdp/Udp_UnitTest/Udp_UnitTest.csproj
@@ -7,7 +7,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Udp_UnitTest</RootNamespace>
     <AssemblyName>Udp_UnitTest</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -28,6 +28,9 @@
   <ItemGroup>
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Castle.Core.4.2.0\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="LibUdp">
+      <HintPath>..\bin\Debug\LibUdp.dll</HintPath>
     </Reference>
     <Reference Include="Moq, Version=4.7.137.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Moq.4.7.137\lib\net45\Moq.dll</HintPath>
@@ -51,10 +54,6 @@
     <ProjectReference Include="..\..\TimerMockable\TimerMockable.csproj">
       <Project>{323a5aa7-f7eb-4990-9b0e-540d75837716}</Project>
       <Name>TimerMockable</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LibUdp.csproj">
-      <Project>{04b6d081-6952-4f0d-8402-df169e0dfb51}</Project>
-      <Name>LibUdp</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
