--- a/HomeAutomationLibraries-master/HeaterControl_UnitTests/HeaterControl_UnitTests.csproj
+++ b/HomeAutomationLibraries-master/HeaterControl_UnitTests/HeaterControl_UnitTests.csproj
@@ -37,6 +37,9 @@
     <Reference Include="HardConfig">
       <HintPath>..\HardConfig\bin\Debug\HardConfig.dll</HintPath>
     </Reference>
+    <Reference Include="HeaterController">
+      <HintPath>..\HeaterController\bin\Debug\HeaterController.dll</HintPath>
+    </Reference>
     <Reference Include="Moq, Version=4.7.137.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.7.137\lib\net45\Moq.dll</HintPath>
     </Reference>
@@ -68,12 +71,6 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\HeaterController\HeaterController.csproj">
-      <Project>{cdc27552-2a35-4885-b458-868aa8f3dec1}</Project>
-      <Name>HeaterController</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
