--- a/HomeAutomationLibraries-master/HeaterControl_UnitTests/HeaterControl_UnitTests.csproj
+++ b/HomeAutomationLibraries-master/HeaterControl_UnitTests/HeaterControl_UnitTests.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -34,12 +34,6 @@
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.4.2.0\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
-    <Reference Include="HardConfig">
-      <HintPath>..\HardConfig\bin\Debug\HardConfig.dll</HintPath>
-    </Reference>
-    <Reference Include="HeaterController">
-      <HintPath>..\HeaterController\bin\Debug\HeaterController.dll</HintPath>
-    </Reference>
     <Reference Include="Moq, Version=4.7.137.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.7.137\lib\net45\Moq.dll</HintPath>
     </Reference>
@@ -55,9 +49,6 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="TimerMockable">
-      <HintPath>..\TimerMockable\bin\Debug\TimerMockable.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HeaterControl_UnitTests.cs" />
@@ -72,5 +63,34 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HardConfig\HardConfig.csproj">
+      <Project>{5D49F2EA-7A48-4D68-BADC-A40414FF7FD7}</Project>
+      <Name>HardConfig</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HeaterController\HeaterController.csproj">
+      <Project>{CDC27552-2A35-4885-B458-868AA8F3DEC1}</Project>
+      <Name>HeaterController</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TimerMockable\TimerMockable.csproj">
+      <Project>{323A5AA7-F7EB-4990-9B0E-540D75837716}</Project>
+      <Name>TimerMockable</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SignalSequencer\SignalSequencer.csproj">
+      <Project>{C4730F40-64B6-49FC-A425-1582EF62D91D}</Project>
+      <Name>SignalSequencer</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <ProjectExtensions>
+    <MonoDevelop>
+      <Properties>
+        <Policies>
+          <VersionControlPolicy>
+            <CommitMessageStyle Indent="&#x9;" FirstFilePrefix="" FileSeparator=":&#xA;" LastFilePostfix=":&#xA;" LineAlign="0" IncludeDirectoryPaths="True" />
+          </VersionControlPolicy>
+        </Policies>
+      </Properties>
+    </MonoDevelop>
+  </ProjectExtensions>
 </Project>
