--- a/HomeAutomationLibraries-master/TestRunnerHeaterController/TestRunnerHeaterController.csproj
+++ b/HomeAutomationLibraries-master/TestRunnerHeaterController/TestRunnerHeaterController.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -34,6 +34,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CommonController\CommonController.csproj">
+      <Project>{3b53484e-e9f7-41dc-bf90-d93389d4e2ea}</Project>
+      <Name>CommonController</Name>
+    </ProjectReference>
     <ProjectReference Include="..\HeaterController\HeaterController.csproj">
       <Project>{CDC27552-2A35-4885-B458-868AA8F3DEC1}</Project>
       <Name>HeaterController</Name>
